# DeskScreen-LowCost

./: partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  hello_world_main.c
main/include/: ds_conf.h  ds_system_data.h  ds_timer.h
main/include/data/: ds_data_image.h
main/include/draw/: ds_font.h  ds_paint.h
main/include/driver/: ds_ft6336.h  ds_screen.h
main/include/fs/: ds_spiffs.h
main/include/hal/: ds_gpio.h  ds_i2c.h  ds_nvs.h  ds_spi.h
main/include/net/: ds_ap_sta.h  ds_http_request.h  ds_http_server.h  ds_wifi_ap.h  ds_wifi_scan.h  ds_wifi_sta.h
main/include/ui/: ds_ui_menupage.h  ds_ui_page_manage.h  ds_ui_settingpage.h  ds_ui_timepage.h  ds_ui_tomatopage.h  ds_ui_weatherpage.h  ds_ui_wordpage.h
main/src/: ds_system_data.c
main/src/data/: ds_data_image.c
main/src/draw/: ds_font.c  ds_paint.c
main/src/driver/: ds_ft6336.c  ds_screen.c
main/src/fs/: ds_spiffs.c
main/src/hal/: ds_gpio.c  ds_i2c.c  ds_nvs.c  ds_spi.c  ds_timer.c
main/src/net/: ds_ap_sta.c  ds_http_request.c  ds_http_server.c  ds_wifi_ap.c  ds_wifi_scan.c  ds_wifi_sta.c
main/src/ui/: ds_ui_menupage.c  ds_ui_page_manage.c  ds_ui_settingpage.c  ds_ui_timepage.c  ds_ui_tomatopage.c  ds_ui_weatherpage.c  ds_ui_wordpage.c
spiffs_image/: hello.txt
